labs/lab-05/allow-egress-to-three-tier-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-three-tier
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      role: monitoring
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: three-tier
      ports:
        - port: 80
          protocol: TCP
        - port: 8080
          protocol: TCP
        - port: 5432
          protocol: TCP
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
