labs/lab-05/allow-monitoring-ingress-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-monitoring-ingress
  namespace: three-tier
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              purpose: monitoring
      ports:
        - port: 80
          protocol: TCP
        - port: 8080
          protocol: TCP
        - port: 5432
          protocol: TCP
