labs/lab-05/default-deny-egress-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: three-tier
spec:
  podSelector: {}
  policyTypes:
    - Egress
