labs/lab-05/default-deny-ingress-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: three-tier
spec:
  podSelector: {}
  policyTypes:
    - Ingress
